# parallel-codex-runner

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  parallel_codex_runner.py  pyproject.toml
.agents/plugins/: marketplace.json
parallel_codex_runner_core/: __init__.py  app.py  codex_cli.py  codex_models.py  diffing.py  models.py  paths.py  plugin_mcp.py  plugin_runtime.py  prompt_history.py  synthesis.py  tui_textual.py  workspace.py  workspace_config.py
parallel_codex_runner_core/_vendor/: __init__.py
parallel_codex_runner_core/plugin/: __init__.py  artifacts.py  cache.py  events.py  lifecycle.py  state.py  worker.py
plugins/parallel-codex-runner/: .mcp.json  README.md  README.zh-CN.md
plugins/parallel-codex-runner/.codex-plugin/: plugin.json
plugins/parallel-codex-runner/scripts/: check_runtime.py  launch_server.sh
plugins/parallel-codex-runner/skills/parallel-codex-runner/: SKILL.md
plugins/parallel-codex-runner/skills/parallel-codex-runner/agents/: openai.yaml
tests/: test_parallel_codex_runner.py  test_plugin_package.py  test_plugin_runtime.py  test_prompt_history.py  test_vendored_textual.py  test_workspace_config.py
