[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-codex-runner"
version = "0.1.3"
description = "Run multiple isolated Codex agents in parallel and sync back the selected result."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "rich",
    "textual>=0.60",
]

[project.optional-dependencies]
pretty = [
    "loguru",
    "rich",
    "tqdm",
]

[project.scripts]
pcr = "parallel_codex_runner:main"

[tool.setuptools]
py-modules = ["parallel_codex_runner"]
packages = ["parallel_codex_runner_core"]
